<resources>
    <string name="app_name">ZigSys</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="envir_frag">环境 Fragment</string>
    <string name="plug_frag">插座 fragment</string>
    <string name="light_frag">光照 Fragment</string>
    <string name="msg_frag">消息 Fragment</string>
    <string name="weather">天气</string>
    <string name="device">设备</string>
    <string name="temp">15°</string>
    <string name="state">状态</string>
    <string name="place">地点</string>
    <string name="title">title</string>
    <string name="summary">summary</string>
    <string name="gate_imei_text">网关的序列号: (可扫描二维码获取)</string>
    <string name="gate_name_text">请给您的网关起个名字:</string>
    <string name="device_name_text">请给您的设备起个名字:</string>
    <string name="gate_name_1">我的设备</string>
    <string name="gate_name_2">我家主控</string>
    <string name="gate_name_3">客厅网关</string>
    <string name="add">添加</string>
    <string name="bind_gate">绑定网关</string>
    <string name="about">关于</string>
    <string name="about_sum">关于</string>
    <string name="statistics">查看统计</string>
    <string name="temp_sub">温度</string>
    <string name="humi_sub">湿度</string>
    <string name="light_sub">光照</string>
    <string name="add_dev">添加设备</string>
    <string name="zero">0</string>
    <string name="online">Online</string>
    <string name="offline">offline</string>
    <string name="line">gate online or offline</string>
    <string name="no_gate">您还没有绑定网关，请点击 “+” 绑定网关</string>
    <string name="no_device">您还没有此类设备，请点击 “+” 添加</string>
    <string name="device_imei_text">设备的序列号: (可扫描二维码获取)</string>
    <string name="device_name_1">客厅-</string>
    <string name="device_name_2">卧室-</string>
    <string name="device_name_3">书房-</string>
    <string name="device_type">设备类型: </string>
    <string name="welcome">欢迎</string>
    <string name="new_usr">新用户 ?</string>

    <array name="frag_title">
        <item>环境</item>
        <item>插座</item>
        <item>灯光</item>
        <item>其它</item>
        <item>消息</item>
    </array>

    <string-array name="mode">
        <item>日常模式</item>
        <item>观影模式</item>
        <item>睡眠模式</item>
        <item>外出模式</item>
        <item>夜间模式</item>
    </string-array>

    <string name="describ">图片描述</string>
    <string name="mail">邮箱</string>
    <string name="pw">密码</string>
    <string name="error">错误</string>
    <string name="login">登录</string>
    <string name="success">成功</string>
    <string name="name">用户名</string>
    <string name="pw2">确认密码</string>
    <string name="reg_error">注册失败</string>
    <string name="register">注册</string>
    <string name="my_device">设备控制</string>
</resources>
