<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.jlshix.zigsys.utils.RoundImageView
                android:id="@+id/head"
                android:src="@drawable/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/describ"

                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <LinearLayout
                android:id="@+id/number"
                android:layout_below="@id/head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">
                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/mail"/>
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>
                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pw"
                        android:inputType="textPassword" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            </LinearLayout>
            <com.dd.CircularProgressButton
                android:id="@+id/login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/number"
                android:layout_centerHorizontal="true"
                app:cpb_selectorIdle="@drawable/idle_state_selector"
                app:cpb_selectorComplete="@drawable/complete_state_selector"
                app:cpb_selectorError="@drawable/error_state_selector"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cpb_textComplete="@string/success"
                app:cpb_textError="@string/error"
                app:cpb_textIdle="@string/login" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/new_usr"
        android:text="@string/new_usr"
        android:layout_alignParentBottom="true"
        android:textColor="#74ABDC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null" />


</RelativeLayout>

