<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/device"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:minHeight="?android:listPreferredItemHeight"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_height="wrap_content">
            <com.jlshix.zigsys.utils.RoundImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/icon"
                android:src="@drawable/avatar"
                android:layout_width="60dp"
                android:layout_height="60dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@color/item_color"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:paddingTop="8dp"
                android:text="@string/summary"
                android:textColor="#AAAAAA"
                android:textSize="14sp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:background="@drawable/blue_bg"
        android:layout_height="0dp">
        <Spinner
            android:id="@+id/mode_spinner"
            android:layout_marginTop="3dp"
            android:gravity="bottom"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>